--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -1619,3 +1619,28 @@ journal = {Journal of Signal Processing Systems},
 doi={10.1007/s11265-010-0510-9},
 }
 
+@inbook{casabook,
+editor = {Wang, DeLiang, and Brown, {Guy J.}},
+author = {Wang, DeLiang, and Brown, {Guy J.}},
+title = {Fundamentals of computational auditory scene analysis},
+booktitle = {Computational auditory scene analysis: Principles, algorithms, and applications},
+year = {2006},
+publisher = {Wiley-IEEE-Press},
+}
+
+@book{bregman,
+author = {Bregman, Albert S.},
+title = {Auditory scene analysis: The perceptual organization of sound},
+year = {1994},
+publisher = {MIT Press},
+}
+
+@article{jutten,
+  title={Blind separation of sources, part I: An adaptive algorithm based on neuromimetic architecture},
+  author={Christian Jutten and Jeanny H{\'e}rault},
+  journal={Signal Processing},
+  year={1991},
+  volume={24},
+  number={1},
+  pages={1--10}
+}
